# RPG-1

./: CMakeLists.txt  README.md  Rpg1  cam.c  graphics.c  main.c  quads.c  rdoc.cap  shader.frag  shader.vert  window1.c
assets/: quads.frag  quads.vert
include/: glad.h  ifs.h  sml.h
include/game/: cam.h  graphics.h  main.h  quads.h  window1.h
include/game/graphics/: quads.h
include/stb/: stb_image.h
stb/: stb_image.c  stb_vorbis.c
